--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>테스트 용 사이트</h1>
-    <a href="C:\Users\ddooi\Desktop\pythonreview\test.txt" download>다운로드</a>
+    <a href="https://drive.google.com/file/d/18wlZaImo6XCICj0f0cAntldw_DlZOarg/view?usp=share_link" download>다운로드</a>
 </body>
 </html>
